# Inklings

./: Cargo.toml  README.md
inklings/: Cargo.toml
inklings-cli/: Cargo.toml
inklings-cli/src/: main.rs
inklings/examples/: basic_chat.rs  basic_usage.rs
inklings/src/: client.rs  lib.rs  types.rs
inklings/src/provider/: anthropic.rs  mock.rs  mod.rs  openai.rs
inklings/tests/: anthropic_tests.rs  client_tests.rs  openai_tests.rs
inklings/tests/common/: mod.rs
