[package]
name = "inklings-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for inklings LLM library"
license = "GPL-3.0-or-later"

[[bin]]
name = "inklings-cli"
path = "src/main.rs"

[dependencies]
inklings = { path = "../inklings" }
tokio = { version = "1.0", features = ["full"] }
