[package]
name = "inklings"
version = "0.1.0"
edition = "2021"
description = "A unified Rust API for various Large Language Model (LLM) providers"
license = "GPL-3.0-or-later"
authors = ["Octoponder Contributors <octoponder@gmail.com>"]
repository = "https://github.com/Octoponder/Inklings"
documentation = "https://docs.rs/inklings"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings", "asynchronous"]
readme = "../README.md"

[lib]
name = "inklings"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[test]]
name = "client_tests"
path = "tests/client_tests.rs"

[[test]]
name = "openai_tests" 
path = "tests/openai_tests.rs"

[[test]]
name = "anthropic_tests"
path = "tests/anthropic_tests.rs"

[dependencies]
async-trait = "0.1"
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
